--- a/index.html
+++ b/index.html
@@ -154,19 +154,19 @@ opportunity to grow the professional path.</p>
             <div class="box" data-aos="fade-right">
                <span>( 2019 - 2020 )</span>
                <h3>web designer</h3>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat assumenda, eaque sequi repellat natus quia.</p>
+               <p>Knowledgeable about Web Design and Development: A web developer should be well-versed in web design principles</p>
             </div>
 
             <div class="box" data-aos="fade-right">
                <span>( 2020 - 2021 )</span>
                <h3>web developer</h3>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat assumenda, eaque sequi repellat natus quia.</p>
+               <p>Proficient in Programming Languages: A good web developer must have a strong understanding of programming languages such as HTML, CSS, JavaScript, and more. </p>
             </div>
 
             <div class="box" data-aos="fade-right">
                <span>( 2021 - 2022 )</span>
                <h3>software developer</h3>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat assumenda, eaque sequi repellat natus quia.</p>
+               <p>Software development is an excellent career choice by any measure. It's a high-paying and growing field, there are plenty of jobs, and workers report positive job satisfaction</p>
             </div>
 
          </div>
@@ -178,19 +178,19 @@ opportunity to grow the professional path.</p>
             <div class="box" data-aos="fade-left">
                <span>( 2019 - 2020 )</span>
                <h3>front-end developer</h3>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat assumenda, eaque sequi repellat natus quia.</p>
+               <p>Be proficient in coding languages such as HTML, CSS, JavaScript, and jQuery. Understand server-side CSS</p>
             </div>
 
             <div class="box" data-aos="fade-left">
                <span>( 2020 - 2021 )</span>
                <h3>back-end developer</h3>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat assumenda, eaque sequi repellat natus quia.</p>
+               <p>Having excellent problem-solving skills, confidence to achieve, and a can-do attitude toward any challenge are important backend developer.</p>
             </div>
 
             <div class="box" data-aos="fade-left">
                <span>( 2021 - 2022 )</span>
                <h3>full-stack developer</h3>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat assumenda, eaque sequi repellat natus quia.</p>
+               <p>Good communication skills, a positive attitude, and a good grasp of the collaborative process that goes behind the building of a product. .</p>
             </div>
 
          </div>
@@ -214,37 +214,37 @@ opportunity to grow the professional path.</p>
       <div class="box" data-aos="zoom-in">
          <i class="fas fa-code"></i>
          <h3>web development</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+         <p>Proficient in Programming Languages.</p>
       </div>
 
       <div class="box" data-aos="zoom-in">
          <i class="fas fa-paint-brush"></i>
          <h3>c,c++ programer</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+         <p>Having excellent problem-solving skills</p>
       </div>
 
       <div class="box" data-aos="zoom-in">
          <i class="fab fa-bootstrap"></i>
          <h3>java basics</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+         <p>Object oriented programing concepts.</p>
       </div>
 
       <div class="box" data-aos="zoom-in">
          <i class="fas fa-chart-line"></i>
          <h3>blockchain devlopment</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+         <p>bitcoin,etherium,crowdfunding,web 3.o</p>
       </div>
 
       <div class="box" data-aos="zoom-in">
          <i class="fas fa-bullhorn"></i>
          <h3> cloud computing </h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+         <p>AWS services,EC2,Docker,S3,SNS,VPC</p>
       </div>
 
       <div class="box" data-aos="zoom-in">
          <i class="fab fa-javascript"></i>
          <h3>javascript</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat veritatis accusantium nostrum rem ipsa.</p>
+         <p>good grasp of the collaborative process that goes behind the building of a product.</p>
       </div>
 
    </div>
@@ -345,7 +345,7 @@ opportunity to grow the professional path.</p>
 
 <!-- contact section ends -->
 
-<div class="credit"> &copy; copyright @ <?php echo date('Y'); ?> by <span>miss web designer</span> </div>
+<div class="credit"> &copy; copyright @ <?php echo date('Y'); ?> by <span>miss Arpita-coder</span> </div>
 
 
 
